# opam-github-workflow

./: .gitignore  README.md  dune  dune-project  github-workflow.opam  github-workflow.opam.template  opam-github-workflow.opam  opam-github-workflow.opam.template
.github/workflows/: test.yml
docs/: index.html
docs/github-workflow/: index.html
docs/github-workflow/Workflow/: index.html
docs/github-workflow/Workflow/Events/: index.html
docs/github-workflow/Workflow/Pp/: index.html
docs/github-workflow/Workflow/Types/: index.html
docs/github-workflow/Workflow/Yaml_util/: index.html
docs/github-workflow/Workflow__/: index.html
docs/github-workflow/Workflow__/Events/: index.html
docs/github-workflow/Workflow__/Pp/: index.html
docs/github-workflow/Workflow__/Types/: index.html
docs/github-workflow/Workflow__Events/: index.html
docs/github-workflow/Workflow__Pp/: index.html
docs/github-workflow/Workflow__Types/: index.html
docs/opam-github-workflow/: index.html
lib/: conf.ml  conf.mli  dune  events.ml  events.mli  pp.ml  pp.mli  types.ml  types.mli  workflow.ml  workflow.mli
